--- a/style/style.css
+++ b/style/style.css
@@ -227,19 +227,22 @@ main .main__logo a:active .fa-chevron-down{
 
 /*                        cars__detal                           */
 
-
+main section.cars__catalog,
 main section.cars__base {
 	height: 0;
 	overflow: hidden;
 }
+main section.cars__catalog .base__detal, 
 main section.cars__base .base__detal {
 	cursor: pointer;
 	width: 160px;
 }
+main section.cars__catalog .base__detal img,
 main section.cars__base .base__detal img {
 	display: block;
 	margin: 0 auto;
 }
+main section.cars__catalog .base__detal .detal__text,
 main section.cars__base .base__detal .detal__text{
 	font-size: 17px;
 	font-weight: 500;
@@ -249,6 +252,7 @@ main section.cars__base .base__detal .detal__text{
 	color: #666666;
 	margin-bottom: 40px;
 }
+main section.cars__catalog .base__detal:hover .detal__text,
 main section.cars__base .base__detal:hover .detal__text{ color: #82C166; }
 
 
@@ -900,6 +904,8 @@ main .auto__detal {
 	margin: 0 auto;
 	justify-content: space-evenly;
 }
+main .auto__detal ~ div.logo__catalog {display: none; height: 85px;}
+main .auto__detal ~ section.cars__catalog {height: auto; display: none; margin-top: 15px;}
 main .auto__detal a img { height: 76px;}
 main .auto__detal a .detal__text {
 	margin-top: 10px;
@@ -1654,7 +1660,7 @@ main.detal section.detal__info .info__price .discount .discount__price {
 main.detal section.detal__info .info__price .card__check.detal__check {margin-top: 30px;}
 main.detal section.detal__info .info__price .card__check.detal__check .fa-check-circle {
 	margin-right: 13px;
-	font-size: 36px;
+	font-size: 30px;
 	color: #7cbe49;
 	border-radius: 100%;
 }
@@ -1698,6 +1704,16 @@ main.detal section.detal__info .info__price .card__check.detal__check span.plus 
 	background-color: #d9d9d9;
 	cursor: pointer;
 }
+section.sale__catalog .sale__wrrap .sale__card .check__number span.minus:hover,
+section.sale__catalog .sale__wrrap .sale__card .check__number span.plus:hover,
+main.detal .detal__cart .sale__card .check__number span.plus:hover,
+section.sale .sale__wrrap .sale__card .check__number span.plus:hover,
+main.detal .detal__cart .sale__card .check__number span.minus:hover,
+section.sale .sale__wrrap .sale__card .check__number span.minus:hover,
+main.detal section.detal__info .info__price .card__check.detal__check span.minus:hover,
+main.detal section.detal__info .info__price .card__check.detal__check span.plus:hover {
+	background-color: #b8b4b4;
+}
 main.detal section.detal__info .info__price button.detal__cart {
 	margin-top: 15px;
 	width: 400px;
@@ -1711,6 +1727,7 @@ main.detal section.detal__info .info__price button.detal__cart {
 	outline: none;
 	cursor: pointer;
 }
+main.detal section.detal__info .info__price button.detal__cart:hover {background-color: rgb(63, 121, 21);}
 main.detal section.detal__info .info__price button.detal__cart img {vertical-align: middle; margin-right: 10px;}
 main.detal section.detal__info .info__price button.detal__bay {
 	margin-top: 15px;
@@ -1725,6 +1742,7 @@ main.detal section.detal__info .info__price button.detal__bay {
 	outline: none;
 	cursor: pointer;
 }
+main.detal section.detal__info .info__price button.detal__bay:hover {background-color: rgb(216, 166, 3);}
 main.detal section.detal__info .info__price button.detal__bay img {vertical-align: middle; margin-right: 10px;}
 main.detal .detal__menu nav a {
 	font-size: 20px;
@@ -1740,9 +1758,9 @@ main.detal .detal__menu nav a::before {
     margin-bottom: 10px;
 	background: #fff;
 }
-main.detal .detal__menu nav a:hover::before,
+main.detal .detal__menu nav a:hover::before {background: #82C166;}
 main.detal .detal__menu nav a:active::before {background: #82C166;}
-main.detal .detal__menu nav a:hover,
+main.detal .detal__menu nav a:hover {color: #82C166; }
 main.detal .detal__menu nav a:active {color: #82C166; }
 main.detal .detal__menu .menu__info {margin: 40px 0 60px 0;}
 main.detal .detal__menu .menu__info ul li {
@@ -1753,6 +1771,7 @@ main.detal .detal__menu .menu__info ul li {
 	color: #262626;
 	margin-bottom: 10px;
 }
+
 main.detal .detal__menu .menu__info ul li span { letter-spacing: 3px;}
 main.detal .detal__menu .detal__line {
 	width: 100%;
@@ -1869,7 +1888,7 @@ main.detal .detal__menu p {
 		height: 20px;
 		font-size: 14px;
 	}
-	main.detal section.detal__info .info__price .card__check.detal__check .fa-check-circle {font-size: 30px;}
+	main.detal section.detal__info .info__price .card__check.detal__check .fa-check-circle {font-size: 21px;}
 	main.detal section.detal__info .info__price .card__check.detal__check p {font-size: 16px;}
 	main.detal section.detal__info .info__price .card__check.detal__check span.minus {
 		width: 35px;
@@ -1941,8 +1960,12 @@ main.detal .detal__menu p {
 }
 @media screen and (max-width: 1025px) {
 	header .header__address {display: none; }
+
+	main section.cars__catalog .base__detal,
 	main section.cars__base .base__detal { width: 141px; }
+	main section.cars__catalog .base__detal img,
 	main section.cars__base .base__detal img { width: 90%; }
+
 	footer .footer__info { padding-left: 15px; padding-right: 15px;}
 	section.sale .sale__wrrap .sale__card { width:20%; }
 	main .catalog__sorted {padding-left: 120px;}
@@ -2365,8 +2388,13 @@ main.detal .detal__cart .sale__card.no_availabilaty .cart__modal .cart__form .fo
 	}
 	section.sale__catalog .sale__wrrap .sale__card.no_availabilaty button.cart__order {margin-top: 15px;}
 	main section.sale {padding: 30px 0 0 0;}
+
+	main section.cars__catalog .base__detal,
 	main section.cars__base .base__detal {width: 95px;}
+
+	main section.cars__catalog .base__detal .detal__text,
 	main section.cars__base .base__detal .detal__text {font-size: 15px;}
+
 	main .main__logo a:nth-child(1) {margin-right: 10px;}
 	main .main__logo a:nth-child(4) {margin-right: 10px;}
 	main .logo__text {font-size: 13px;}
