--- a/style/style.css
+++ b/style/style.css
@@ -2575,7 +2575,12 @@ main.cars__models .models__byd button {
 	main.cars__accessories .accessories__list a figure figcaption {font-size: 14px;}
 	/*             accessories          */
 	/*              liquids            */
-	main.cars__liquids .liquids__list a {width: 20%;}
+	main.cars__liquids .liquids__list a {width: 16%;}
+	main.cars__liquids .liquids__list a figure img {
+		width: 80px;
+		height: 80px;
+		padding: 20px 16px;
+	}
 	/*              liquids           */
 }
 
@@ -2869,11 +2874,11 @@ main.cars__models .models__byd span {font-size: 16px;}
 	}
 	/*                   accessories           */
 /*                       liquids              */
-main.cars__liquids .liquids__list a figure img {
-    width: 80px;
-    height: 80px;
-	padding: 20px 16px;
+main.cars__liquids .liquids__list a {
+    width: 25%;
 }
+main.cars__liquids .liquids__list a {margin-bottom: 30px;}
+main.cars__liquids .liquids__list a figure figcaption {font-size: 13px;}
 /*                       liquids              */
 @media screen and (max-width: 376px) {
 	section.sale__catalog .sale__wrrap .sale__card .card__check .check__pieces p,
@@ -2909,6 +2914,10 @@ main.cars__liquids .liquids__list a figure img {
 	main.cars__models .byd__cars .base__detal {width: 25%;}
 
 	/*         model          */
+	/*                       liquids              */
+main.cars__liquids .liquids__list a {width: 33%;}
+
+/*                       liquids              */
 }
 @media screen and (max-width: 370px) {
 	header .header__phone div {font-size: 12px;}
