--- a/style/style.css
+++ b/style/style.css
@@ -1972,9 +1972,11 @@ main.cars__accessories .accessories__list a figure figcaption {
 }
 /*                        accessories                   */
 
-/*                        liquids                       */
+/*                        liquids, light                       */
+main.cars__light .model__menu,
 main.cars__liquids .model__menu {margin-bottom: 40px;}
 
+main.cars__light .model__menu a,
 main.cars__liquids .model__menu a {
 	opacity: 0.8;
 	font-size: 16px;
@@ -1982,6 +1984,7 @@ main.cars__liquids .model__menu a {
   	text-align: center;
   	color: #666666;
 }
+main.cars__light .model__menu a:before,
 main.cars__liquids .model__menu a:before {
 	content: "";
     display: block;
@@ -1990,17 +1993,22 @@ main.cars__liquids .model__menu a:before {
     margin-bottom: 10px;
     background: #fff;
 }
+main.cars__light .model__menu a:hover::before,
 main.cars__liquids .model__menu a:hover::before{background: #7cbe49;}
+main.cars__light .model__menu a:hover,
 main.cars__liquids .model__menu a:hover {color: #7cbe49;}
 
-
+main.cars__light .light__list,
 main.cars__liquids .liquids__list{justify-content: stretch;}
+main.cars__light .light__list a,
 main.cars__liquids .liquids__list a {
 	width: 14%;
 	padding-top: 10px;
 	margin-bottom: 60px;
 }
+main.cars__light .light__list a figure,
 main.cars__liquids .liquids__list a figure {width: calc(100% - 30px); margin: 0 auto;}
+main.cars__light .light__list a figure img,
 main.cars__liquids .liquids__list a figure img {
 	width: 100px;
     height: 100px;
@@ -2008,13 +2016,14 @@ main.cars__liquids .liquids__list a figure img {
 	padding: 24px 20px;
 	border-radius: 4px;
 }
+main.cars__light .light__list a figure figcaption,
 main.cars__liquids .liquids__list a figure figcaption {
 	font-size: 17px;
 	font-weight: 300;
 	text-align: left;
 	color: #666666;
 }
-/*                        liquids                       */
+/*                        liquids, light                      */
 
 
 @media (max-width: 1441px) {
@@ -2559,6 +2568,7 @@ main.cars__models .models__byd button {
 	/*             model                 */
 	main.cars__accessories .model__menu a:before,
 	main.cars__liquids .model__menu a:before,
+	main.cars__light .model__menu a:before,
 	main.cars__models .model__menu a:before {width: 130px;}
 	main.cars__models .geely__cars .base__detal,
 	main.cars__models .chery__cars .base__detal,
@@ -2574,14 +2584,16 @@ main.cars__models .models__byd button {
 	}
 	main.cars__accessories .accessories__list a figure figcaption {font-size: 14px;}
 	/*             accessories          */
-	/*              liquids            */
+	/*              liquids, light           */
+	main.cars__light .light__list a,
 	main.cars__liquids .liquids__list a {width: 16%;}
+	main.cars__light .light__list a figure img,
 	main.cars__liquids .liquids__list a figure img {
 		width: 80px;
 		height: 80px;
 		padding: 20px 16px;
 	}
-	/*              liquids           */
+	/*              liquids, light          */
 }
 
 @media screen and (max-width: 426px) {
@@ -2839,10 +2851,12 @@ main.detal .detal__cart .sale__card .card__price button.cart__buy:hover:after,
 	/*                 model                 */
 main.cars__accessories .model__menu,
 main.cars__liquids .model__menu,
+main.cars__light .model__menu,
 main.cars__models .model__menu {flex-direction: column;}
 
 main.cars__accessories .model__menu a:before,
 main.cars__liquids .model__menu a:before,
+main.cars__light .model__menu a:before,
 main.cars__models .model__menu a:before {
 	width: 100%;
 	margin-top: 5px;
@@ -2850,6 +2864,7 @@ main.cars__models .model__menu a:before {
 }
 main.cars__accessories .model__menu a,
 main.cars__liquids .model__menu a,
+main.cars__light .model__menu a,
 main.cars__models .model__menu a {
     display: block;
 	width: 90%;
@@ -2873,13 +2888,12 @@ main.cars__models .models__byd span {font-size: 16px;}
 		margin-bottom: 35px;
 	}
 	/*                   accessories           */
-/*                       liquids              */
-main.cars__liquids .liquids__list a {
-    width: 25%;
-}
-main.cars__liquids .liquids__list a {margin-bottom: 30px;}
+/*                       liquids, light          */
+main.cars__light .light__list a,
+main.cars__liquids .liquids__list a {width: 25%; margin-bottom: 30px;}
+main.cars__light .light__list a figure figcaption,
 main.cars__liquids .liquids__list a figure figcaption {font-size: 13px;}
-/*                       liquids              */
+/*                       liquids, light              */
 @media screen and (max-width: 376px) {
 	section.sale__catalog .sale__wrrap .sale__card .card__check .check__pieces p,
 	section.sale .sale__wrrap .sale__card .card__check .check__pieces p {font-size: 10px;}
@@ -2914,10 +2928,11 @@ main.cars__liquids .liquids__list a figure figcaption {font-size: 13px;}
 	main.cars__models .byd__cars .base__detal {width: 25%;}
 
 	/*         model          */
-	/*                       liquids              */
-main.cars__liquids .liquids__list a {width: 33%;}
+	/*                       liquids, light             */
+	main.cars__light .light__list a,
+	main.cars__liquids .liquids__list a {width: 33%;}
 
-/*                       liquids              */
+/*                       liquids, light              */
 }
 @media screen and (max-width: 370px) {
 	header .header__phone div {font-size: 12px;}
