--- a/style/style.css
+++ b/style/style.css
@@ -5,19 +5,16 @@ body {
 	font-family: 'Segoe UI', Arial;
 	background-color: #F2F2F2;
 }
-
-a {text-decoration: none;}
+a {text-decoration: none}
 
 
 /*      Header        */
-header {
-	padding: 20px 0 30px 0;
-}
-header .mob__menu { display: none;}
-header div.flex .fa-bars { display: none;}
-header .mobile__shoping { display: none;}
-header img.header__logo { width: 250px;}
-header form {position: relative;}
+header { padding: 20px 0 30px 0 }
+header .mob__menu,
+header div.flex .fa-bars,
+header .mobile__shoping { display: none }
+header img.header__logo { width: 250px }
+header form {position: relative }
 header form .fa-chevron-down {
 	font-size: 19px;
 	color: #d9d9d9;
